--- a/_data/clubes.yml
+++ b/_data/clubes.yml
@@ -3,9 +3,9 @@ clubes:
 - title: Resurgidos
   city: Toritama
   uf: PE
-  url: resurgidos.html
+  url: https://www.instagram.com/ressurgidosmc_oficial/
 
 - title: Quilombolas Moto Grupo
   city: União dos Palmares
   uf: AL
-  url: quilombolas-moto-grupo.html
+  url: https://www.instagram.com/quilombolas_motogrupo/
