--- a/_data/eventos.yml
+++ b/_data/eventos.yml
@@ -1,10 +1,31 @@
 title: Eventos
 eventos:
+  - title: 2º Aniversário do independentes do pajeú
+    # url: 2024-01-05-evento-a.html
+    city: Afogados da ingazeira
+    uf: PE
+    date: 2024-02-24
 
-- title: Evento A
-  url: 2024-01-04-evento-a.html
-  date: 2024-01-06
+  - title: Inauguração da sede resurgidos
+    # url: 2024-01-04-evento-a.html
+    city: Toritama
+    uf: PE
+    date: 2024-03-16
 
-- title: Evento B
-  url: 2024-01-05-evento-a.html
-  date: 2024-01-05
+  - title: 13º Taquaratinga motofest
+    # url: 2024-01-05-evento-a.html
+    city: Taquaratinga
+    uf: PE
+    date: 2024-03-29
+
+  - title: Tabira motofest
+    # url: 2024-01-05-evento-a.html
+    city: Tabira
+    uf: PE
+    date: 2024-05-24
+
+  - title: Custódia motofest 2024
+    # url: 2024-01-05-evento-a.html
+    city: Custódia
+    uf: PE
+    date: 2024-06-01
