--- a/_data/eventos.yml
+++ b/_data/eventos.yml
@@ -1,61 +1,379 @@
 title: Eventos
+dt_atualizacao: 2024-02-14
 eventos:
-  - title: 2º Aniversário do independentes do pajeú
-    # url: 2024-01-05-evento-a.html
-    city: Afogados da ingazeira
-    uf: PE
+  -
+    date: 2024-02-17
+    title: 26° ANIVERSÁRIO FALCÕES RAÇA LIBERTA
+    city: SANTOS
+    uf: SP
+  -
     date: 2024-02-24
-
-  - title: 2º Milagres motofest
-    # url: 2024-01-05-evento-a.html
-    city: Milagres
+    title: 2º ANIVERSÁRIO DO INDEPENDENTES DO PAJEÚ
+    city: AFOGADOS DA INGAZEIRA
+    uf: PE
+  -
+    date: 2024-02-24
+    title: 5° ANIVERSÁRIO FALCÕES RAÇA LIBERTA
+    city: FEIRA DE SANTANA
     uf: BA
+  -
+    date: 2024-02-29
+    title: TAQUARATINGA MOTOFEST
+    city: TAQUARATINGA DO NORTE
+    uf: PE
+  -
+    date: 2024-03-05
+    title: MOTO ROCK PRADO
+    city: PRADO
+    uf: BA
+  -
+    date: 2024-03-09
+    title: 10 ANOS ITALVA MG
+    city: ITALVA
+    uf: RJ
+  -
     date: 2024-03-15
-
-  - title: Inauguração da sede resurgidos
-    # url: 2024-01-04-evento-a.html
-    city: Toritama
+    title: XI PESQUEIRA MOTOFEST
+    city: PESQUEIRA
     uf: PE
+  -
+    date: 2024-03-15
+    title: 7° ENCONTRO NAC MOTOCICLISTAS
+    city: RIO DE CONTAS
+    uf: BA
+  -
     date: 2024-03-16
-
-  - title: 2º Penedo motofest
-    # url: 2024-01-05-evento-a.html
-    city: Penedo
-    uf: AL
+    title: INAUGURAÇÃO DA SEDE RESURGIDOS
+    city: TORITAMA
+    uf: PE
+  -
+    date: 2024-03-16
+    title: CORAÇÃO MOTO FEST
+    city: CORAÇÃO DE MARIA
+    uf: BA
+  -
+    date: 2024-03-16
+    title: 2° MOTOFEST
+    city: MILAGRES
+    uf: BA
+  -
+    date: 2024-03-16
+    title: 1° BATE E FICA DAS CARAUBEIRAS
+    city: CARAÚBAS
+    uf: RN
+  -
     date: 2024-03-22
-
-  - title: 13º Taquaratinga motofest
-    # url: 2024-01-05-evento-a.html
-    city: Taquaratinga
-    uf: PE
+    title: 1° MOTO FEST
+    city: LAURO DE FREITAS
+    uf: BA
+  -
+    date: 2024-03-22
+    title: 12° PENEDO MOTO FEST
+    city: PENEDO
+    uf: AL
+  -
     date: 2024-03-29
-  
-  - title: Cabedelo motofest
-    # url: 2024-01-05-evento-a.html
-    city: Cabedelo
-    uf: PB
+    title: 13º TAQUARATINGA MOTOFEST
+    city: TAQUARATINGA
+    uf: PE
+  -
     date: 2024-04-05
-
-  - title: Tabira motofest
-    # url: 2024-01-05-evento-a.html
-    city: Tabira
-    uf: PE
-    date: 2024-05-24
-
-  - title: Custódia motofest 2024
-    # url: 2024-01-05-evento-a.html
-    city: Custódia
-    uf: PE
-    date: 2024-06-01
-
-  - title: Motochico 2024
-    # url: 2024-01-05-evento-a.html
-    city: Petrolina
-    uf: PE
-    date: 2024-07-11
-
-  - title: 19º Campina Grande motofest 
-    # url: 2024-01-05-evento-a.html
-    city: Campina Grande
+    title: CABEDELO MOTOFEST
+    city: CABEDELO
     uf: PB
+  -
+    date: 2024-04-06
+    title: 2° MATA GRANDE MOTO FEST
+    city: MATA GRANDE
+    uf: AL
+  -
+    date: 2024-04-07
+    title: 1 ANIVERSÁRIO CAÇADORES MG
+    city: SALVADOR
+    uf: BA
+  -
+    date: 2024-04-13
+    title: 13 MOTO FEST POÇO VERDE
+    city: POÇO VERDE
+    uf: SE
+  -
+    date: 2024-04-19
+    title: BOM CONCELHO MOTO WEEK
+    city: CÍCERO DANTAS
+    uf: BA
+  -
+    date: 2024-04-26
+    title: VIII ENC. NACIONAL MOTOCICLISTAS MOTOROCKER
+    city: PARNAÍBA
+    uf: PI
+  -
+    date: 2024-04-27
+    title: 8 ANIVERSARIO BLOOD BROTHERS MC
+    city: SEABRA
+    uf: BA
+  -
+    date: 2024-05-16
+    title: 15° SALGUEIRO MOTO FEST
+    city: SALGUEIRO
+    uf: PE
+  -
+    date: 2024-05-17
+    title: 5° BURITIS MOTOFEST
+    city: BURITIS
+    uf: MG
+  -
+    date: 2024-05-24
+    title: TABIRA MOTOFEST
+    city: TABIRA
+    uf: PE
+  -
+    date: 2024-05-24
+    title: 5° BARREIRAS MOTO NACIONAL
+    city: BARREIRAS
+    uf: BA
+  -
+    date: 2024-05-31
+    title: CAMPOS MOTO FEST
+    city: CAMPO DOS GOYTACAZAES
+    uf: RJ
+  -
+    date: 2024-06-01
+    title: CUSTÓDIA MOTOFEST 2024
+    city: CUSTÓDIA
+    uf: PE
+  -
+    date: 2024-06-01
+    title: BATE FICA 2024
+    city: CONSELHEIRO PENA
+    uf: MG
+  -
+    date: 2024-06-07
+    title: XXVIII ENCONTRO INTER. DE MOTOCICLISTAS
+    city: MIGUEL PEREIRA
+    uf: RJ
+  -
+    date: 2024-06-09
+    title: FEIJOADA DOS MOTOCICLISTAS DE SERROLÂNDIA
+    city: SERROLÂNDIA
+    uf: BA
+  -
+    date: 2024-06-14
+    title: 22° ANIVERSÁRIO MC PAPA ROAD
+    city: CARANGOLA
+    uf: MG
+  -
+    date: 2024-06-15
+    title: 5° BATE E FICA PELICANO DO ASFALTO
+    city: CHAPADINHA
+    uf: MA
+  -
+    date: 2024-07-05
+    title: 3° FESTIVAL DE INVERNO DA CIDADE DE SERRA GRANDE
+    city: SERRA GRANDE
+    uf: PB
+  -
+    date: 2024-07-06
+    title: 25 ANOS AVENTUREIROS DA LIBERDADE MC
+    city: NOVA LIMA
+    uf: MG
+  -
+    date: 2024-07-07
+    title: GERAIZEIROS MOTO ROCK
+    city: ESPÍNOSA
+    uf: MG
+  -
+    date: 2024-07-11
+    title: MOTOCHICO 2024
+    city: PETROLINA
+    uf: PE
+  -
+    date: 2024-07-12
+    title: SOUSA MOTO FEST
+    city: SOUSA
+    uf: PB
+  -
+    date: 2024-07-18
+    title: CAPITAL MOTO WEEK
+    city: BRASÍLIA
+    uf: DF
+  -
+    date: 2024-07-19
+    title: 10° EDIÇÃO MOTOFEST - MC OS TARJA PRETA
+    city: COELHO NETO
+    uf: MA
+  -
+    date: 2024-07-26
+    title: ALAGOAS MOTO ENCONTRO
+    city: MACEIÓ
+    uf: AL
+  -
+    date: 2024-07-27
+    title: 3° ANIVERSÁRIO MC TEMPO LIVRE
+    city: VALENTE
+    uf: BA
+  -
+    date: 2024-08-02
+    title: 2° ITAETÊ MOTO FEST
+    city: ITAETÊ
+    uf: BA
+  -
+    date: 2024-08-02
+    title: DELMIRO GOUVEIA MOTOFEST
+    city: DELMIRO GOUVEIA
+    uf: AL
+  -
+    date: 2024-08-09
+    title: 2° EUNÁPOLIS MÔFOROCK
+    city: EUNÁPOLIS
+    uf: BA
+  -
+    date: 2024-08-09
+    title: 2° MOTUÍPE
+    city: MUTUÍPE
+    uf: BA
+  -
+    date: 2024-08-23
+    title: 3° MOTOFEST AVES DE .PINA
+    city: POJUCA
+    uf: BA
+  -
+    date: 2024-08-30
+    title: 2° MOTOFEST IRON WOLVES MC
+    city: MIMOSO DO SUL
+    uf: ES
+  -
+    date: 2024-09-06
+    title: 2° MOTOFEST
+    city: CONCEIÇÃO DA BARRA
+    uf: ES
+  -
+    date: 2024-09-13
+    title: 3° SAJ MOTOFEST
+    city: STO. ANTÔNIO DE JESUS
+    uf: BA
+  -
+    date: 2024-09-13
+    title: 2° MOTO FEST PÉ DE SER.
+    city: PÉ DE SERRA
+    uf: BA
+  -
+    date: 2024-09-14
+    title: 7° ANIVERSÁRIO ANJOS NEGROS MC
+    city: NANUQUE
+    uf: MG
+  -
+    date: 2024-09-20
+    title: 2° MOTOFEST BALA EST.DEIRO
+    city: INHAMBUPE
+    uf: BA
+  -
+    date: 2024-09-20
+    title: 3° SÍTIO DO CONDE MOTO PRAIA
+    city: SÍTIO DO CONDE
+    uf: BA
+  -
+    date: 2024-09-27
+    title: MOTO CRUZ
+    city: CRUZ DAS ALMAS
+    uf: BA
+  -
+    date: 2024-09-28
+    title: 9° JANDAÍ.
+    city: JANDAÍ
+    uf: BA
+  -
+    date: 2024-10-05
+    title: 9° ANIVERSÁRIO DRUTAMONTES
+    city: SALVADOR
+    uf: BA
+  -
+    date: 2024-10-11
+    title: 2 TRI FESTIVAL DE NAZARÉ
+    city: NAZARÉ
+    uf: BA
+  -
+    date: 2024-10-11
+    title: 2 ENCONTRO DE MOTOCASAIS DO NORDESTE
+    city: JOÃO PESSOA
+    uf: PB
+  -
+    date: 2024-10-18
+    title: 5° ITAPEMIRIM PRAIA MOTOFEST
+    city: ITAPEMIRIM
+    uf: ES
+  -
+    date: 2024-10-19
+    title: 10° ANIVERSÁRIO FUNDAÇÃO WOLF MC
+    city: SALVADOR
+    uf: BA
+  -
+    date: 2024-10-25
+    title: JEQUIÉ MOTO CAR
+    city: JEQUIÉ
+    uf: BA
+  -
+    date: 2024-10-31
+    title: 6° CANES MOTO FEST
+    city: CANAVIEIRAS
+    uf: BA
+  -
+    date: 2024-11-03
+    title: 9° ANIVERSÁRIO MOTO CLUBE JORRENSE
+    city: ALAGOINHAS
+    uf: BA
+  -
+    date: 2024-11-07
+    title: MEGA MOTO FEIRA
+    city: FEIRA DE SANTANA
+    uf: BA
+  -
+    date: 2024-11-08
+    title: INHAPI MOTO FEST - MC TIGRE DOURADO
+    city: INHAPI
+    uf: AL
+  -
+    date: 2024-11-08
+    title: EMOCAP - ENC.MOTOCICLISTAS DO CARIRI PARAIBANO
+    city: MONTEIRO
+    uf: PB
+  -
+    date: 2024-11-09
+    title: 19° ANIVERSÁRIO DO MC FÊNIX BRASIL
+    city: RIO DAS OSTRAS
+    uf: RJ
+  -
+    date: 2024-11-15
+    title: ENCONTRO NACIONAL DE MOTOCICLISTAS
+    city: ITUAÇU
+    uf: BA
+  -
     date: 2024-11-21
+    title: 19º CAMPINA GRANDE MOTOFEST
+    city: CAMPINA GRANDE
+    uf: PB
+  -
+    date: 2024-11-30
+    title: ANIVERSÁRIO T-REX
+    city: ALAGOINHAS
+    uf: BA
+  -
+    date: 2024-12-06
+    title: 3° DIVINO MOTOFEST E 5° ANIVERSÁRIO DOS INÚTEIS MG
+    city: DIVINO
+    uf: MG
+  -
+    date: 2024-12-08
+    title: 2° BATE E VOLTA ROTA DO SERTÃO DO FOX MC
+    city: NOSSA SRA. DA GLÓRIA
+    uf: SE
+  -
+    date: 2024-12-12
+    title: BYE BYE
+    city: SENHOR DO BONFIM
+    uf: BA
+  -
+    date: 2024-12-21
+    title: ANIVERSÁRIO PRESIDENTE CLEBER FIBRAS MC BAHIA
+    city: ALAGOINHAS
+    uf: BA
+
