--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 pix: contato@mo7o.club
 instagram_username: mo7oclub
 lang: pt-BR
-
+google_analytics: G-WKE3YG0VBN
 # Build settings
 theme: minima
 plugins:
