--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 pix: contato@mo7o.club
-instagram_username: mo7oclub
+instagram_username: mo7o.club
 lang: pt-BR
 google_analytics: G-WKE3YG0VBN
 # Build settings
