Adição MC Sobreviventes do Cangaço Brasil

--- a/_data/clubes.yml
+++ b/_data/clubes.yml
@@ -14,3 +14,8 @@ clubes:
   city: Águas Belas
   uf: PE
   url: https://www.facebook.com/kactosdoAsfaltoAguasbelasPE
+
+- title: MC Sobreviventes do Cangaço Brasil  
+  city: Caruaru
+  uf: PE
+  url: https://www.instagram.com/mcsc_brasil
