Adiciona COVEIROS MOTO CLUBE BRASIL

--- a/_data/clubes.yml
+++ b/_data/clubes.yml
@@ -40,3 +40,8 @@ clubes:
   city: Maceió
   uf: AL
   url: https://arqueirosdeaco.com.br/
+
+- title: COVEIROS MOTO CLUBE BRASIL
+  city: Teresópolis
+  uf: RJ
+  url: https://www.instagram.com/coveirosmc/
